cmake_minimum_required(VERSION 3.31)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/.devcontainer/cmake)
include(preproject)
project(buildpro)
set(externpro_REV 24.05)
find_package(externpro REQUIRED)
set(webpro_REV NONE)
include(flags)
include(deps)
xpFindPkg(PKGS criticalio dde_lib gsoap hdf5 libspatialite nasm ng_gdp palam patch pluginsdk sdvideo spatialite-tools)
xpSourceListAppend()
